# nematode

./: .gitignore  7×7_TML_catalog.md  Cargo.toml  README.md  requirements.txt
core/reflex-format/: Cargo.toml
core/reflex-format/src/: lib.rs
core/telemetry/: Cargo.toml
core/telemetry-compute/: Cargo.toml
core/telemetry-compute/src/: lib.rs
core/telemetry/src/: lib.rs
data/models/: normalizer.json
docs/: 00-overview.md  12-telemetry-sensorium.md  13-telemetry-chronome.md  SESSION_2025-10-07.md
docs/reports/: chronome-findings-brief.md  empirical-oracle-experiment.md  empirical-oracle-findings.md  sensorium-findings.md  thread-pool-v1.md
forge/: trainer.py  trainer_compute.py
plan/: PHASE1_CALIBRATION.md  RESEARCH_ROADMAP.md
sim/: Cargo.toml
sim-compute/: Cargo.toml  README.md
sim-compute/src/: lib.rs
sim/src/: lib.rs  main.rs
