[workspace]
members = [
    "core/reflex-format",
    "core/telemetry",
    "core/telemetry-compute",
    "sim",
    "sim-compute",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
