[package]
name = "sim-compute"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
telemetry-compute = { path = "../core/telemetry-compute" }
reflex-format = { path = "../core/reflex-format" }
serde.workspace = true
serde_json.workspace = true
rand = "0.8"

[[bin]]
name = "baseline-compute"
path = "src/bin/baseline.rs"

[[bin]]
name = "reflex-compute"
path = "src/bin/reflex.rs"
