[package]
name = "sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "baseline"
path = "src/bin/baseline.rs"

[[bin]]
name = "reflex"
path = "src/bin/reflex.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
telemetry = { path = "../core/telemetry" }
reflex-format = { path = "../core/reflex-format" }
rand = "0.8"
csv = "1.3"
